Fix several examples to be better on mobile, fix mobile example layout

--- a/docs/src/examples/reactivity/fireworks-display/component.css
+++ b/docs/src/examples/reactivity/fireworks-display/component.css
@@ -4,6 +4,7 @@
     border: var(--border);
     border-radius: var(--border-radius);
     background: black;
+    max-width: 100%;
   }
   p {
     font-size: var(--small);
